# training-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yaml
src/tests/: test_registrations.py  test_session_context.py  test_state_loading.py  test_threads.py  test_trainer.py  test_training_framework_additional.py  test_training_session.py
src/training-framework/: checkpointer.py  training_iterator.py
src/training_framework/: checkpointer.py  configurator.py  dataloader.py  resources.py  training_engine.py  training_session.py  util.py
